--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="ShareNote allows users to share single pages that are editable by the creator and can be shared with everyone. Simple React project with crazy features including an in-house text editor, expiry options, shareable links & QR codes, word count tracker, full-screen mode, and more.">
-    <meta name="keywords" content="ShareNote, editable pages, React, Tailwind CSS, Zustand, Appwrite, text editor, expiry options, shareable links, QR codes, word count tracker, full-screen mode, PDF export">
+    <meta name="keywords" content="ShareNote, Anshul Soni, youngest web developer, youngest 11 year old developer, 14 year old web developer- Anshul Soni, anshulsoni2010, web developer portfolio, React, Tailwind CSS, Zustand, Appwrite, text editor, expiry options, shareable links, QR codes, word count tracker, full-screen mode, PDF exportt">
 
     <!-- Open Graph metadata -->
     <meta property="og:title" content="ShareNote" />
@@ -15,16 +15,15 @@
     <!-- Twitter metadata -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="ShareNote" />
-    <meta name="twitter:description" content="ShareNote allows users to share single pages that are editable by the creator and can be shared with everyone. Simple React project with crazy features including an in-house text editor, expiry options, shareable links & QR codes, word count tracker, full-screen mode, and more." />
+    <meta name="twitter:description" content="ShareNote allows users to share single pages that are editable by the creator and can be shared with everyone. Simple React project with crazy features including an in-house text editor, expiry options, shareable links & QR codes, word coun ttracker, full-screen mode, and more." />
     <meta name="twitter:image" content="/logo.jpeg" />
 
-    <link rel="icon" type="image/svg+xml" href="/logo.jpeg" />
-
+    <link rel="icon" type="image/jpeg" href="/logo.jpeg" />
 
     <title>ShareNote</title>
   </head>
   <body>
-    <div class="pattern-grid h-screen w-screen " id="root"></div>
+    <div class="pattern-grid h-screen w-screen" id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
